-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.5, 6.7
-
None
-
4e742135f (dev)
-
DaVinci 98
QDoc no longer writes the \target and \keyword identifiers into the index, if they appear within an \fn documentation topic.
This means that such targets fail to act as link targets for the \l command when trying to link across module boundaries.
| For Gerrit Dashboard: QTBUG-125969 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 564685,5 | qdoc: Write \target and \keyword elements to index for all node types | dev | qt/qttools | Status: MERGED | +2 | 0 |
| 565128,1 | qdoc: Write \target and \keyword elements to index for all node types | 6.7 | qt/qttools | Status: ABANDONED | 0 | 0 |